# task-manager

./: .env_example  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-coverage.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_labelmodel_created_at.py  0003_remove_labelmodel_tasks.py
task_manager/management/commands/: createsu.py
task_manager/statuses/: admin.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: status.json  user.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_statusmodel_created_at_alter_statusmodel_name.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_taskmodel_description_alter_taskmodel_executor.py  0003_taskmodel_labels.py  0004_alter_taskmodel_labels.py  0005_alter_taskmodel_labels.py
task_manager/templates/: base.html  index.html  messages.html
task_manager/templates/labels/: labelmodel-create.html  labelmodel-delete.html  labelmodel-update.html  labels-list.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: statuses-list.html  statusmodel-create.html  statusmodel-delete.html  statusmodel-update.html
task_manager/templates/tasks/: task-info.html  taskmodel-create.html  tasks-list.html  (+2 more)
task_manager/users/: admin.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
(+7 files in other folders)
